--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
 header{
   background-color: #FFFEEF;
   width: 100%;
-  max-height: 144px;
+  max-height: 100px;
   position: absolute;
   display: inline-block;
   top: 0;
@@ -33,6 +33,11 @@ input {
   padding-bottom: 10px;
   padding-left: 50px;
   width: 100%;
+}
+
+.radio{
+    width: auto;
+    display: inline;
 }
 
 .mainHeader {
@@ -201,7 +206,7 @@ input {
 }
 
 .error{
-    color: #ff0000; 
+    color: #ff0000;
 }
 
 
