--- a/style.css
+++ b/style.css
@@ -1,13 +1,24 @@
+html, body {
+    height: 100%;
+    margin:0;
+    padding:0;
+}
+
 body{
-  color: #2e2e2d;
-  background-color: #e0dfd2;
+  color: #3a8a9e;
+  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6) ), url("background.jpg");
+   background-position: center;
+   background-size: cover;
+   background-repeat: no-repeat;
+   overflow-x: hidden;
+   overflow-y: hidden;
 }
 
 header{
-  background-color: #FFFEEF;
+  background-color: rgb(211,211,211, 0.9);
   width: 100%;
-  max-height: 100px;
-  position: absolute;
+  /*height: 140px;*/
+  max-height: 15%;
   display: inline-block;
   top: 0;
   left: 0;
@@ -23,6 +34,7 @@ input {
   background: transparent;
   border: 0;
   border-bottom: 1px solid #7F7C51;
+  border-radius: 5px;
   box-sizing: border-box;
   color: #7F7C51;
   display: block;
@@ -33,6 +45,7 @@ input {
   padding-bottom: 10px;
   padding-left: 50px;
   width: 100%;
+  transition: all 1.0s ease-out;
 }
 
 .radio{
@@ -40,25 +53,42 @@ input {
     display: inline;
 }
 
+.wrapper {
+    top: 140px;
+    height: 100%;
+    overflow: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.wrapper div{
+    flex:auto;
+    max-height: : 100%;
+    /*text-align: center;*/
+}
+
 .mainHeader {
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .mainHeader div {
-  flex: 2 2 10%;
-  align-content: center;
+  flex:auto;
   text-align: center;
 }
 
-.logo{
-  display: block;
-}
 
 .logo img{
   display: block;
-  height: 100%;
+  max-height: 100px;
 }
+
+
 .title{
   display: block;
 }
@@ -74,17 +104,29 @@ input {
 }
 
 .form{
-  text-align: right;
-  width: 40%;
-  max-height: 60%;
-  text-align: center;
-  position: fixed;
-  display: block;
-  top:60%;
-  left:50%;
-  transform: translate(-50%, -50%);
-  background-color: #FFFEEF;
-  border-radius: 20px;
+    margin: auto;
+    float: left;
+    text-align: right;
+    width: 40%;
+    overflow: auto;
+    text-align: center;
+    position: absolute;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1%;
+    /*transform: translate(-50%, -50%);*/
+    background-color: rgb(211,211,211, 0.9);
+    border-radius: 20px;
+    transition: transform 1.5s;
+}
+
+.form.animatedIn{
+    animation: 1.5s slideIn;
+}
+
+.form.animatedOut{
+    animation: 1.5s slideOut;
 }
 
 .form h2{
@@ -98,18 +140,9 @@ input {
 
 
 .button {
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #eae0c2), color-stop(1, #b5a579));
-	background:-moz-linear-gradient(top, #eae0c2 5%, #b5a579 100%);
-	background:-webkit-linear-gradient(top, #eae0c2 5%, #b5a579 100%);
-	background:-o-linear-gradient(top, #eae0c2 5%, #b5a579 100%);
-	background:-ms-linear-gradient(top, #eae0c2 5%, #b5a579 100%);
-	background:linear-gradient(to bottom, #eae0c2 5%, #b5a579 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#eae0c2', endColorstr='#b5a579',GradientType=0);
 	background-color:#eae0c2;
-	-moz-border-radius:12px;
-	-webkit-border-radius:12px;
 	border-radius:12px;
-	border:1px solid #333029;
+	/*border:1px solid #333029;*/
 	display:inline-block;
 	cursor:pointer;
 	color:#505739;
@@ -118,14 +151,9 @@ input {
 	font-weight:bold;
 	padding:10px 30px;
 	text-decoration:none;
+    transition: 0.5s;
 }
 .button:hover {
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #b5a579), color-stop(1, #eae0c2));
-	background:-moz-linear-gradient(top, #b5a579 5%, #eae0c2 100%);
-	background:-webkit-linear-gradient(top, #b5a579 5%, #eae0c2 100%);
-	background:-o-linear-gradient(top, #b5a579 5%, #eae0c2 100%);
-	background:-ms-linear-gradient(top, #b5a579 5%, #eae0c2 100%);
-	background:linear-gradient(to bottom, #b5a579 5%, #eae0c2 100%);
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#b5a579', endColorstr='#eae0c2',GradientType=0);
 	background-color:#b5a579;
 }
@@ -134,16 +162,6 @@ input {
 	top:1px;
 }
 .menu-button {
-	-moz-box-shadow: 3px 4px 0px 0px #899599;
-	-webkit-box-shadow: 3px 4px 0px 0px #899599;
-	box-shadow: 3px 4px 0px 0px #899599;
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #bab1ba));
-	background:-moz-linear-gradient(top, #ededed 5%, #bab1ba 100%);
-	background:-webkit-linear-gradient(top, #ededed 5%, #bab1ba 100%);
-	background:-o-linear-gradient(top, #ededed 5%, #bab1ba 100%);
-	background:-ms-linear-gradient(top, #ededed 5%, #bab1ba 100%);
-	background:linear-gradient(to bottom, #ededed 5%, #bab1ba 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ededed', endColorstr='#bab1ba',GradientType=0);
 	background-color:#ededed;
 	-moz-border-radius:15px;
 	-webkit-border-radius:15px;
@@ -157,27 +175,13 @@ input {
 	padding:7px 25px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #e1e2ed;
+    transition: all 0.3s ease-out;
 }
 .menu-button:hover {
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #bab1ba), color-stop(1, #ededed));
-	background:-moz-linear-gradient(top, #bab1ba 5%, #ededed 100%);
-	background:-webkit-linear-gradient(top, #bab1ba 5%, #ededed 100%);
-	background:-o-linear-gradient(top, #bab1ba 5%, #ededed 100%);
-	background:-ms-linear-gradient(top, #bab1ba 5%, #ededed 100%);
-	background:linear-gradient(to bottom, #bab1ba 5%, #ededed 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#bab1ba', endColorstr='#ededed',GradientType=0);
 	background-color:#bab1ba;
 }
-.menu-button:active {
-	position:relative;
-	top:1px;
-}
-
 
 .menu-button-active {
-	-moz-box-shadow: 3px 4px 0px 0px #899599;
-	-webkit-box-shadow: 3px 4px 0px 0px #899599;
-	box-shadow: 3px 4px 0px 0px #899599;
 	background-color:transparent;
 	-moz-border-radius:15px;
 	-webkit-border-radius:15px;
@@ -193,23 +197,102 @@ input {
 	text-decoration:none;
 	text-shadow:0px 1px 0px #e1e2ed;
 }
+
 .menu-button-active:hover {
 	background-color:transparent;
-}
-.menu-button-active:active {
-	position:relative;
-	top:1px;
 }
 
 .required{
     background: rgb(255,0,0,0.25);
+    transition: all 1.0s ease-out;
 }
 
 .error{
     color: #ff0000;
 }
 
+#signIn, #signUp2{
+    display: none;
+}
+.form.animatedIn{
+    animation: 1.5s slideIn;
+}
 
-#signIn, #signUp2 {
-  display: none;
+.form.animatedOut{
+    animation: 1.5s slideOut;
+}
+
+@keyframes slideIn {
+    0% {
+        left: -1250px;
+    }
+    100% {
+          left: 29%;
+    }
+}
+
+@keyframes slideOut {
+    0% {
+        left: 29%;
+    }
+    100% {
+          left: 250%;
+    }
+}
+
+
+@media only screen and (max-width: 1300px) {
+
+    header{
+        max-height: none;
+    }
+    .form{
+        margin: auto;
+        float: left;
+        text-align: right;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        text-align: center;
+        position: relative;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 1%;
+        /*transform: translate(-50%, -50%);*/
+        background-color: rgb(211,211,211, 1);
+        border-radius: 0px;
+        transition: transform 1.8s;
+    }
+    .form.animatedIn{
+        animation: 1.5s slideIn;
+    }
+
+    .form.animatedOut{
+        animation: 1.5s slideOut;
+    }
+    @keyframes slideIn {
+        0% {
+            opacity: 0;
+        }
+        33%{
+            opacity: 0;
+        }
+        66%{
+            display: block;
+            opacity: 0;
+        }
+        100% {
+            opacity: 1;
+          }
+    }
+    @keyframes slideOut {
+        0% {
+            opacity: 1;
+        }
+        100% {
+            opacity: 0;
+        }
+    }
+
 }
