--- a/style.css
+++ b/style.css
@@ -2,6 +2,22 @@ html, body {
     height: 100%;
     margin:0;
     padding:0;
+    font-family: 'Raleway', sans-serif;
+
+}
+
+header:before {
+    content: "";
+    position: fixed;
+    top: -10px;
+    left: 0;
+    width: 100%;
+    height: 10px;
+
+    -webkit-box-shadow: 0px 0px 10px rgba(0,0,0,1);
+      -moz-box-shadow: 0px 0px 10px rgba(0,0,0,1);
+                 box-shadow: 0px 0px 10px rgba(0,0,0,1);
+    z-index: 100;
 }
 
 body{
@@ -23,6 +39,7 @@ header{
   top: 0;
   left: 0;
   z-index: 10;
+  border-bottom: 3px outset #111;
 }
 
 header h1{
@@ -60,7 +77,7 @@ input {
     display: inline;
 }
 
-.wrapper {
+.wrapper{
     top: 140px;
     height: 100%;
     overflow: auto;
@@ -69,12 +86,6 @@ input {
     justify-content: center;
     align-items: center;
 
-}
-
-.wrapper div{
-    flex:auto;
-    max-height: : 100%;
-    /*text-align: center;*/
 }
 
 .mainHeader {
@@ -111,10 +122,10 @@ input {
 }
 
 .form{
-    margin: auto;
     float: left;
     text-align: right;
-    width: 40%;
+    top: 200px;
+    width: 30%;
     overflow: auto;
     text-align: center;
     position: absolute;
@@ -122,10 +133,14 @@ input {
     margin-left: auto;
     margin-right: auto;
     padding: 1%;
-    /*transform: translate(-50%, -50%);*/
-    background-color: rgb(211,211,211, 0.9);
+    background-color: rgb(211,211,211, 1);
+    box-shadow: 10px 10px 30px 20px #000;
     border-radius: 20px;
     transition: transform 1.5s;
+}
+.form div{
+    margin: 5px;
+    height: 30px;
 }
 
 .form.animatedIn{
@@ -153,7 +168,7 @@ input {
 	display:inline-block;
 	cursor:pointer;
 	color:#032137;
-	font-family:Times New Roman;
+	font-family: 'Raleway', sans-serif;
 	font-size:20px;
 	font-weight:bold;
 	padding:7px 25px;
@@ -172,8 +187,8 @@ input {
 	display:inline-block;
 	cursor:pointer;
 	color:#032137;
-	font-family:Times New Roman;
-	font-size:20px;
+    font-family: 'Raleway', sans-serif;
+    font-size:20px;
 	font-weight:bold;
 	padding:10px 30px;
 	text-decoration:none;
@@ -195,8 +210,8 @@ input {
 	display:inline-block;
 	cursor:pointer;
 	color:#3a8a9e;
-	font-family:Arial;
-	font-size:17px;
+    font-family: 'Raleway', sans-serif;
+    font-size:17px;
 	padding:7px 25px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #e1e2ed;
@@ -215,8 +230,8 @@ input {
 	display:inline-block;
 	cursor:pointer;
 	color:#3a8a9e;
-	font-family:Arial;
-	font-size:17px;
+    font-family: 'Raleway', sans-serif;
+    font-size:17px;
 	font-weight:bold;
 	padding:7px 25px;
 	text-decoration:none;
@@ -243,7 +258,20 @@ input {
     transition: all 1.0s ease-out;
 }
 
-#signIn, #signUp2{
+.pane{
+    align-content: center;
+    text-align: center;
+    background: #FFF;
+    width: 60%;
+    height: 40%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
+#signIn{
     display: none;
 }
 
@@ -289,41 +317,95 @@ input {
 }
 
 
-@media only screen and (max-width: 1300px) {
+/*4K screens*/
+@media only screen and (min-width: 2560px){
+    .form{
+        width: 50%;
+        height: 60%;
+        font-size: 1.5em;
+    }
+    .form div {
+        margin-top: 20px;
+        margin-bottom: 10px;
+    }
+    label{
+        display: inline-block;
+        margin-top: 10px;
+    }
+    input{
+        font-size: 1.0em;
+        margin: 5px;
+    }
+}
+
+/* Tablet*/
+@media only screen and (max-width: 1024px){
+
     body{
         background-color: rgba(221, 221, 221, 1);
+        height: 100%;
+        font-size: 120%;
     }
-
     header{
         background-color: rgb(211,211,211, 1);
         max-height: none;
+        font-size: 10%;
+        height: 15%;
     }
     .mainHeader{
         background-color: rgb(211,211,211, 1);
         max-height: none;
     }
 
-    .wrapper{
-            background-color: rgb(211,211,211, 1);
+    .mainHeader h1 {
+        font-size: 25px;
+        margin-right: auto;
+        margin-left: auto;
     }
 
+    .logo img {
+        width: 20%;
+        padding-left: 50%;
+    }
+
+
+    .wrapper{
+        background-color: rgb(211,211,211, 1);
+    }
+
+    .menu {
+        padding: 0;
+    }
+
+
+    .menu button {
+        font-size: 12px;
+    }
+
+
     .form{
-        float: left;
-        text-align: right;
-        width: 100%;
+        z-index: 0;
+        font-size: 12px;
+        border-radius: 10px;
+        top:0px;
+        width: 70%;
         height: 100%;
         overflow: auto;
         text-align: center;
         position: relative;
+        margin-top: 0px;
         display: block;
         margin-left: auto;
         margin-right: auto;
-        padding: 1%;
-        /*transform: translate(-50%, -50%);*/
         background-color: rgb(211,211,211, 1);
         border-radius: 0px;
         transition: transform 1.8s;
     }
+
+    .form input {
+        font-size: 10px;
+    }
+
     .form.animatedIn{
         animation: .75s fadeIn;
     }
@@ -331,5 +413,66 @@ input {
     .form.animatedOut{
         animation: 0.75s fadeOut;
     }
+}
 
+
+
+
+/* Phoone Portrait mode*/
+@media only screen and (max-width: 426px){
+
+    body{
+        background: none;
+        overflow: scroll;
+        background-color: rgba(221, 221, 221, 1);
+        height: 100%;
+        width: 100%;
+    }
+
+    .mainHeader{
+        background-color: rgb(211,211,211, 1);
+        max-height: 150px;
+    }
+
+    .mainHeader h1 {
+        font-size: 20px;
+        margin: 2px;
+        margin-right: auto;
+        margin-left: auto;
+    }
+
+    .logo img {
+        width: 100%;
+        padding:0;
+    }
+
+    .wrapper{
+        height: 85%;
+        background-color: rgb(211,211,211, 1);
+        top: 35%;
+    }
+
+    .form{
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+        background-color: rgb(211,211,211, 1);
+        transition: transform 1.8s;
+    }
+
+    .pane{
+        height: 100%;
+        width: 100%;
+    }
+
+    .form.animatedIn{
+        animation: .75s fadeIn;
+    }
+
+    .form.animatedOut{
+        animation: 0.75s fadeOut;
+    }
 }
