--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ header:before {
 
 body{
   color: #3a8a9e;
-   background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6) ), url("background.jpg");
+   background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6) ), url("images/background.jpg");
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
